# smolRPG

./: CMakeLists.txt  Dockerfile  README.md  commands.txt  docker-compose.yaml  main  start.bat  start.sh
header/: character.h  characterMovement.h  drawBackground.h  drawFight.h  fight.h  fightDraw.h  fightEvent.h  functions.h  game.h  obstacle.h  spell.h
src/: character.c  characterMovement.c  drawBackground.c  drawFight.c  fight.c  fightDraw.c  fightEvent.c  functions.c  game.c  main.c  obstacle.c  spell.c
